# KeldyshQFT

./: .gitignore  .gitlab-ci.yml  .hdoc.toml  CITATION.cff  README.md  SIAM_constant_vertex  SIAM_constant_vertex.cpp  compile.sh  data_structures.h  hdoc_API_key.txt  key  key.pub  physics_functions.h  util.h
Code_Fabian_XES/: CMakeLists.txt  myfuncs.h  myheader.h  mymain.cpp  mytests.h
Code_Fabian_XES/plots/: xes_plots.ipynb
Integration_for_Comparing_3.0/: CMakeLists.txt  approxxpp.h  blnla.cpp  blnla.h  check.nb  integrate_new.h  main.cpp  matrix.cpp  patterson_set.cpp  patterson_set.h
Integration_for_Comparing_3.0/include/: domain.hpp
Integration_for_Comparing_3.0/tests/: test.cpp  test_seg.cpp
Keldysh_SelfEnergy_SOPT_Comparing/: CMakeLists.txt  Makefile  Propagator.h  approxxpp.cpp  main.cpp  matrix.h
Keldysh_SelfEnergy_SOPT_Comparing/include/: queue.hpp
Keldysh_SelfEnergy_SOPT_Comparing/tests/: integrand.hpp
Keldysh_mfRG/: .nfs000000000167fffa00001980  .nfs0000000004f58e3800001d94  .nfs000000000526a8800000134b  CMakeLists.txt  Doxyfile  Doxyfile.in  HUBBARD_sopt_selfenergy.h  Keldysh_symmetries.h  KramersKronig.h  LICENSE.md  ODE_solvers.h  a_bubble.h  a_vertex.h  bethe-salpeter.h  bubbles.h  causality_FDT_checks.h  compile_asc.sh  compile_kcs.sh  compile_lrz.sh  correctionFunctions.h  data_structures.c++  data_structures.cpp  data_structures.h  data_structures.hpp  diagrammatic_combinations.h  flow.h  fourier_trafo.h  free_propagator_functions.h  frequency_grid.h  hdf5_routines.h  integrator.h  internal_symmetries.h  interpolations.h  load_data.py  loop.h  main.cpp  makefile  minimizer.h  momentum_grid.h  mpi_setup.h  (+32 more)
Keldysh_mfRG/Documentation/: algorithms.rst  bubble.rst  conf.py  correlationfunctions.rst  diagrams.rst  index.rst  mfrg.rst  parquet.rst  postprocessing.rst  prerequisites.rst  propagator.rst  selfenergy.rst  vertices.rst
Keldysh_mfRG/FPP/: 1D-integrals.h  Coordinates.h  Differential_Equation.h  FPP_grids.hpp  FPP_main.cpp  Ladder-approximation.h  Momentum-integral-Bubble.h  Monte-Carlo_Trial.h  fRG-T-matrix-approach.h  selfenergy_loop.h  zeros.h
Keldysh_mfRG/Integrator_NR/: integrator_NR.h
Keldysh_mfRG/Latex Files/: bibliography.bib  main.aux  main.bbl  main.blg  main.tex
Keldysh_mfRG/Mathematica Results/: parameters
Keldysh_mfRG/ODE_solvers/: ODE_solver_config.hpp  ODE_solvers.c++  ODE_solvers.h  ODE_solvers.hpp  old_solvers.hpp
Keldysh_mfRG/OldFiles/: SOPT_FFT_tests.h  a_bubble.h  a_vertex.h  bethe-salpeter.h  domain.hpp  fourier_trafo.h  p_bubble.h  p_vertex.h  paid.hpp  queue.hpp  rule.hpp  save_hdf5.h  susceptibility.h  t_bubble.h  t_vertex.h
Keldysh_mfRG/asymptotic_corrections/: bubble_corrections.c++  bubble_corrections.hpp  correctionFunctions.h  correctionFunctions.hpp  correction_functions.hpp  loop_corrections.c++  loop_corrections.hpp
Keldysh_mfRG/bubble/: bubble.hpp  bubble_function.hpp  bubbles.h  bubbles.hpp  integrand.hpp  precalculated_bubble.hpp
Keldysh_mfRG/correlation_functions/: state.h  state.hpp
Keldysh_mfRG/grids/: flow_grid.c++  flow_grid.h  flow_grid.hpp  frequency_grid.c++  frequency_grid.h  frequency_grid.hpp  momentum_grid.c++  momentum_grid.h  momentum_grid.hpp
Keldysh_mfRG/gsl-2.5/: Makefile  config.status  libtool
Keldysh_mfRG/integrator/: integrator.cpp  integrator.h  integrator.hpp  integrator_NR.h  integrator_NR.hpp  old_integrators.c++  old_integrators.h  old_integrators.hpp
Keldysh_mfRG/interpolations/: InterpolatorCubic3D.h  InterpolatorLinOrSloppy.h  InterpolatorLinOrSloppy.hpp  InterpolatorSpline1D.h  InterpolatorSpline1D.hpp  InterpolatorSpline2D.h  InterpolatorSpline2D.hpp  InterpolatorSpline3D.h  InterpolatorSpline3D.hpp  interpolation_functions.h  vertex_interpolations.h
Keldysh_mfRG/ipynb_scripts/: Analysis_Error_Scaling.ipynb  Error_Analysis.ipynb  Plot_flow_SOPT.ipynb  Plotter.ipynb  load_data.py  plot_SOPT.ipynb  plotting_routines.py  sync_Keldysh_mfRG_data.sh
Keldysh_mfRG/latex_files/: main.tex
Keldysh_mfRG/loop/: integrandSE.hpp  loop.c++  loop.h  loop.hpp
Keldysh_mfRG/mfRG_flow/: flow.c++  flow.h  flow.hpp  right_hand_sides.h  right_hand_sides.hpp
Keldysh_mfRG/multidimensional/: multiarray.h  multiarray.hpp  ranged_view.h  ranged_view.hpp
Keldysh_mfRG/old_files/: SOPT_FFT_tests.h  fourier_trafo.h
Keldysh_mfRG/paid-integrator/: config.hpp  domain.hpp  invoker.hpp  lmu.hpp  omp_stub.h  paid.hpp  queue.hpp  rule.hpp  task.hpp  types.hpp
Keldysh_mfRG/parameters/: frequency_parameters.h  frequency_parameters.hpp  master_parameters.c++  master_parameters.h  master_parameters.hpp  momentum_parameters.hpp  technical_parameters.h  technical_parameters.hpp
Keldysh_mfRG/perturbation_theory_and_parquet/: HUBBARD_sopt_selfenergy.c++  HUBBARD_sopt_selfenergy.h  HUBBARD_sopt_selfenergy.hpp  hartree_term.c++  hartree_term.cpp  hartree_term.hpp  parquet_solver.c++  parquet_solver.h  parquet_solver.hpp  perturbation_theory.c++  perturbation_theory.h  perturbation_theory.hpp
Keldysh_mfRG/postprocessing/: KramersKronig.c++  KramersKronig.h  KramersKronig.hpp  causality_FDT_checks.c++  causality_FDT_checks.h  causality_FDT_checks.hpp  main_postproc.cpp  postprocessing.c++  postprocessing.h  postprocessing.hpp  sanity_check.hpp
Keldysh_mfRG/scripts/: Profiling.md  batchfile.sh  check_for_abs.sh  compile_asc.sh  compile_cluster.sh  compile_kcs.sh  compile_lrz.sh  kcs_instructions.md  reproduce_benchmark_data.py
Keldysh_mfRG/symmetries/: Keldysh_symmetries.c++  Keldysh_symmetries.h  Keldysh_symmetries.hpp  internal_symmetries.h  internal_symmetries.hpp  symmetry_table.h  symmetry_table.hpp  symmetry_transformations.c++  symmetry_transformations.h  symmetry_transformations.hpp
Keldysh_mfRG/tests/: get_integrand_dGammaC.cpp  get_integrand_dGammaL.cpp  get_integrand_dGamma_1loop.cpp  get_integrand_dGamma_1loop_fromFlow.cpp  omp_test.h  saveIntegrand.h  testFunctions.h  test_Hartree.c++  test_Hartree.cxx  test_Hubbard_SOPT.cxx  test_Hubbard_SOPT.hpp  test_ODE.h  test_ODE.hpp  (+13 more)
source/: CMakeLists.txt  Doxyfile.in  data_structures.c++  data_structures.hpp  main.cpp
(+5149 files in other folders)
